<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_title"
        android:layout_width="@dimen/dimen_312dp"
        android:layout_height="@dimen/dimen_168dp"
        android:text="@string/apk_title"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_88dp"
        android:textSize="@dimen/dimen_32sp"
        android:textColor="#FF000000"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/guide_line"
        android:layout_width="@dimen/dimen_260dp"
        android:layout_height="@dimen/dimen_290dp"
        android:layout_marginTop="@dimen/dimen_292dp"
        android:text="@string/guild_line_text"
        android:textAlignment="center"
        android:textColor="#FF212121"
        android:textSize="@dimen/dimen_14sp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dimen_50dp"/>

    <Button
        android:layout_width="@dimen/dimen_252dp"
        android:layout_height="@dimen/dimen_36dp"
        android:text="@string/check_for_updates"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/dimen_14sp"
        android:background="@drawable/btn_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_623dp"
        android:layout_marginLeft="@dimen/dimen_54dp"
        android:textAllCaps="false"
        android:foreground="@drawable/btn_foreground"
        android:id="@+id/recovery_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_18dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment" />


</RelativeLayout>