<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context="com.example.n3dot1plusswupdate.CheckFragment">
    <TextView
        android:id="@+id/error_text"
        android:layout_width="@dimen/dimen_312dp"
        android:layout_height="@dimen/dimen_168dp"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="@dimen/dimen_32sp"
        android:layout_marginTop="@dimen/dimen_88dp"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/new_version_desc"
        android:visibility="gone"
        android:layout_width="@dimen/dimen_260dp"
        android:layout_height="@dimen/dimen_290dp"
        android:text="@string/new_version_desc"
        android:textColor="#FF212121"
        android:textSize="@dimen/dimen_14sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_292dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/check_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="@dimen/dimen_292dp">
              <ImageView
                  android:layout_width="@dimen/dimen_36dp"
                  android:layout_height="@dimen/dimen_36dp"
                  android:src="@mipmap/done"
                  android:id="@+id/done_sd_img"
                  android:layout_marginStart="@dimen/dimen_50dp"/>

              <TextView
                  android:id="@+id/done_sd_text"
                  android:layout_width="@dimen/dimen_224dp"
                  android:layout_height="@dimen/dimen_18dp"
                  android:text="@string/sdcard"
                  android:textColor="#FF212121"
                  android:textSize="@dimen/dimen_14sp"
                  android:enabled="false"
                  android:layout_marginTop="@dimen/dimen_9dp"
                  />
          </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dimen_36dp"
                android:layout_height="@dimen/dimen_36dp"
                android:src="@mipmap/done"
                android:id="@+id/done_space_img"
                android:layout_marginStart="@dimen/dimen_50dp"/>

            <TextView
                android:id="@+id/done_space_text"
                android:layout_width="@dimen/dimen_224dp"
                android:layout_height="@dimen/dimen_60dp"
                android:text="@string/sd_space"
                android:textColor="#FF212121"
                android:textSize="@dimen/dimen_14sp"
                android:enabled="false"
                android:layout_marginTop="@dimen/dimen_9dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dimen_36dp"
                android:layout_height="@dimen/dimen_36dp"
                android:src="@mipmap/done"
                android:id="@+id/done_power_img"
                android:layout_marginStart="@dimen/dimen_50dp"/>

            <TextView
                android:id="@+id/done_power_text"
                android:layout_width="@dimen/dimen_224dp"
                android:layout_height="@dimen/dimen_18dp"
                android:text="@string/power"
                android:textColor="#FF212121"
                android:textSize="@dimen/dimen_14sp"
                android:enabled="false"
                android:layout_marginTop="@dimen/dimen_9dp"
               />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="@dimen/dimen_252dp"
        android:layout_height="@dimen/dimen_36dp"
        android:background="@drawable/btn_bg"
        android:foreground="@drawable/btn_foreground"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/dimen_14sp"
        android:layout_marginTop="@dimen/dimen_623dp"
        android:layout_marginLeft="@dimen/dimen_53dp"
        android:enabled="false"
        android:textAllCaps="false"
        android:text="@string/next"
        android:layout_centerHorizontal="true"
        android:id="@+id/recovery_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_18dp"/>
</RelativeLayout>